...
import androidx.compose.ui.res.pluralStringResource
import androidx.compose.ui.res.stringResource
import com.jeanbarrossilva.ongoing.feature.activities.ActivitiesSelection
import com.jeanbarrossilva.ongoing.feature.activities.R

internal const val REMOVAL_CONFIRMATION_DIALOG_TAG = "removal_confirmation_dialog"
internal const val REMOVAL_CONFIRMATION_DIALOG_TEXT_TAG = "removal_confirmation_dialog_text"
internal const val REMOVAL_CONFIRMATION_DIALOG_CONFIRMATION_BUTTON_TAG =
    "removal_confirmation_dialog_confirmation_button"

@OptIn(ExperimentalComposeUiApi::class)
@Composable
internal fun RemovalConfirmationDialog(
    selection: ActivitiesSelection.On,
...
